--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-papaparse": "^4.4.0",
-    "react-router-dom": "^7.1.5",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.22.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.15.1",
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4",
