--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-fetch": "^3.3.2",
     "papaparse": "^5.5.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-papaparse": "^4.4.0",
     "react-router-dom": "^6.22.1",
