--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@netlify/functions": "^3.0.0",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-popover": "^1.1.5",
-    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "lucide-react": "^0.263.1",
@@ -58,6 +57,8 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@testing-library/jest-dom": "^6.6.3",
     "jest": "^27.5.1",
     "netlify-cli": "^18.0.4"
   }
